# GetoptPlusPlus

./: CMakeLists.txt  README.md
example/: app.cpp
include/: ConsoleOptionsHandler.h
include/GetOptPP/: ConsoleKeyOption.h  ConsoleOptionsHandler.h
source/: ConsoleKeyOption.cpp  ConsoleOptionsHandler.cpp
